objects/ASI_MFM_Payment_Term__c.object
<CustomObject>
    <description>Payment term master for MFM</description>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fixed_Date__c</fullName>
        <label>Fixed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JP_NumberOfDays__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JP_PaymentTermDigits__c</fullName>
        <label>Payment Term Digits</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Payment Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Payment_Term</fullName>
        <active>true</active>
        <label>CN Payment Term</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Payment_Term</fullName>
        <active>true</active>
        <label>JP Payment Term</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>